[gd_scene load_steps=7 format=3 uid="uid://cloxbatjjvgwx"]

[ext_resource type="PackedScene" uid="uid://r4kecweu2wer" path="res://Assets/massive_door_with_animation.glb" id="1_xwwt5"]
[ext_resource type="Script" path="res://Scripts/bunkerDoor.gd" id="2_b7u4v"]

[sub_resource type="ConvexPolygonShape3D" id="ConvexPolygonShape3D_2vy14"]
points = PackedVector3Array(0.0566751, -0.135866, -0.649808, 1.33934, 0.0539762, 0.742739, 1.01112, 0.1439, 0.605735, 1.25487, 0.0539762, -0.917067, 1.1433, -0.190434, 0.756501, 0.0452089, 0.0539762, 0.827165, 0.239263, 0.1439, -0.589467, 1.24549, -0.189235, -0.625507, 0.100765, -0.191215, 0.62629, 0.180684, -0.191403, -0.767956, 0.0734127, 0.0539762, -0.888866, 1.01112, 0.1439, -0.589467, 0.239263, 0.1439, 0.605735, 1.25487, 0.0539762, 0.883567, 1.02101, -0.209521, -0.426117, 0.131544, -0.0835571, 0.834228, 1.33934, 0.0539762, -0.748214, 1.19998, -0.0840605, -0.875203, 1.30033, -0.110009, 0.646709, 0.0037, -0.030423, 0.642675, 0.0037, 0.0223238, -0.649898, 1.16708, -0.189523, -0.759182, 0.132152, -0.0834947, -0.866729, 1.01664, -0.20741, 0.43832, 0.101482, 0.0539762, 0.883567, 0.186623, -0.189366, 0.751339, 1.2466, -0.18953, 0.619554, 1.20029, -0.0840911, 0.842191, 1.30033, -0.110009, -0.65377, 0.101482, 0.0539762, -0.917067, 0.173417, 0.124189, -0.63524, 0.0178414, -0.0572701, -0.716375)

[sub_resource type="ConvexPolygonShape3D" id="ConvexPolygonShape3D_c37qb"]
points = PackedVector3Array(1.01924, 0.1246, -0.594316, 1.63963, 0.0505831, 0.609475, 1.62108, 0.0605948, 0.590907, 0.998483, 0.0389004, 0.644117, 1.65735, 0.0389004, -0.644117, 1.50402, 0.12378, 0.582555, 0.998483, 0.0389004, -0.644117, 1.01924, 0.1246, 0.594316, 1.50402, 0.12378, -0.582555, 1.65735, 0.0389004, 0.644117, 1.00357, 0.107327, -0.634168, 1.00361, 0.107324, 0.63409, 1.63963, 0.0505831, -0.609475)

[sub_resource type="ConvexPolygonShape3D" id="ConvexPolygonShape3D_07luh"]
points = PackedVector3Array(-0.301262, -0.274986, -0.13056, 0.318677, 0.255079, 0.139374, 0.31256, 0.268409, 0.141119, 0.139374, 0.255079, -0.318677, -0.312087, 0.268005, 0.140906, 0.14109, -0.265926, 0.312496, 0.312496, -0.265926, -0.14109, -0.140906, 0.268005, -0.312087, -0.13936, -0.252625, -0.318645, -0.139579, -0.253024, 0.319146, 0.13124, 0.25858, 0.323072, -0.318678, 0.25508, -0.139375, -0.318645, -0.252625, 0.13936, 0.323072, 0.25858, -0.131177, 0.319134, -0.253068, 0.139574, 0.141326, -0.266372, -0.313018, -0.14112, 0.268411, 0.312562, 0.130526, 0.277343, -0.291183, -0.13056, -0.274986, 0.301262, 0.301262, -0.274986, 0.13056, -0.319146, -0.253024, -0.139579, 0.130463, 0.27721, 0.291042, -0.291183, 0.277343, -0.130526, -0.320095, 0.246246, 0.139994, 0.13056, -0.274986, -0.301262, -0.139994, 0.246246, -0.320095, 0.139579, -0.253023, -0.319144, 0.29099, 0.277221, -0.130468, 0.318609, -0.25265, -0.139345, 0.139349, -0.252605, 0.318619, -0.130526, 0.277343, 0.291183, -0.139375, 0.25508, 0.318678)

[sub_resource type="BoxShape3D" id="BoxShape3D_cjbpc"]
size = Vector3(1.665, 1, 1)

[node name="Door" instance=ExtResource("1_xwwt5")]
script = ExtResource("2_b7u4v")

[node name="StaticBody3D" type="StaticBody3D" parent="Sketchfab_model/f0bcc7f0fb50450eae90f9257df51df4_fbx/Object_2/RootNode/entry_4/entry_4_door/entry_4_door_entry_4__entry_4_Nor_0" index="0"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Sketchfab_model/f0bcc7f0fb50450eae90f9257df51df4_fbx/Object_2/RootNode/entry_4/entry_4_door/entry_4_door_entry_4__entry_4_Nor_0/StaticBody3D" index="0"]
shape = SubResource("ConvexPolygonShape3D_2vy14")

[node name="StaticBody3D" type="StaticBody3D" parent="Sketchfab_model/f0bcc7f0fb50450eae90f9257df51df4_fbx/Object_2/RootNode/entry_4/entry_4_door/entry_4_looker/entry_4_looker_entry_4__entry_4_Nor_0" index="0"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Sketchfab_model/f0bcc7f0fb50450eae90f9257df51df4_fbx/Object_2/RootNode/entry_4/entry_4_door/entry_4_looker/entry_4_looker_entry_4__entry_4_Nor_0/StaticBody3D" index="0"]
shape = SubResource("ConvexPolygonShape3D_c37qb")

[node name="StaticBody3D" type="StaticBody3D" parent="Sketchfab_model/f0bcc7f0fb50450eae90f9257df51df4_fbx/Object_2/RootNode/entry_4/entry_4_door/entry_4_rad/entry_4_rad_entry_4__entry_4_Nor_0" index="0"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Sketchfab_model/f0bcc7f0fb50450eae90f9257df51df4_fbx/Object_2/RootNode/entry_4/entry_4_door/entry_4_rad/entry_4_rad_entry_4__entry_4_Nor_0/StaticBody3D" index="0"]
shape = SubResource("ConvexPolygonShape3D_07luh")

[node name="Control" type="Control" parent="." index="2"]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Area3D" type="Area3D" parent="." index="3"]
collision_layer = 256
collision_mask = 2

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area3D" index="0"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -1.10195)
shape = SubResource("BoxShape3D_cjbpc")

[node name="Timer" type="Timer" parent="." index="4"]
wait_time = 7.0
one_shot = true

[connection signal="body_entered" from="Area3D" to="." method="_on_area_3d_body_entered"]
[connection signal="body_exited" from="Area3D" to="." method="_on_area_3d_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
